# algorithms-for-distributed-systems-philosopher-nom-nom

./: Cargo.toml  config.sh  demo-fedora-all.sh  demo-fedora-forks.sh  demo-fedora-thinkers.sh  demo-schmac-all.command  demo-schmac-fork.command  demo-schmac-init.command  demo-schmac-philosopher.command  fedora-all.sh  fedora-forks.sh  fedora-thinkers.sh
src/: lib.rs  messages.rs
src/fork_lib/: fork.rs
src/lib/: config.rs  fork.rs  messages.rs  thinker.rs  transceiver.rs  utils.rs  visualizer.rs
src/lib/messages/: fork_messages.rs  init_messages.rs  thinker_messages.rs  visualizer_messages.rs
src/thinker_lib/: thinker.rs
tests/: recovery.rs
