[package]
name = "philosopher-nom-nom-ring"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fork"

[[bin]]
name = "thinker"

[[bin]]
name = "init"

[dependencies]
rkyv = { version = "0.8.12", features = ["bytecheck", "uuid-1"] }
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
simple_logger = "5.1.0"
log = "0.4.29"
uuid = { version = "1.19.0", features = ["v4"] }
