[package]
name = "philosopher-nom-nom-ring"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fork"

[[bin]]
name = "thinker"

[[bin]]
name = "init"

[[bin]]
name = "visualizer"

[dependencies]
rkyv = { version = "0.8.12", features = ["bytecheck", "uuid-1"] }
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
env_logger = "0.11.8"
log = "0.4.29"
uuid = { version = "1.19.0", features = ["v4"] }
colored = "3.0.0"
